--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -92,7 +92,7 @@ jobs:
             verilator --timescale 10ns/1ns --assert --trace --binary cores/riscy32_single/tests/${item}_tb.sv cores/riscy32_single/src/${item}.sv
             ./obj_dir/V${item}_tb
             sootty "${a}.vcd" -o > waveforms/svg/${item}.svg
-            mv ${a}.vcd ./waveforms/vcd/
+            mv "${a}.vcd" waveforms/vcd/
           done
 
       - name: Upload waveforms as artifact
