--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,12 +22,9 @@ jobs:
         path: /usr/local/share/verilator/
         key: verilator-binary
 
-  riscy32_single:
+  riscy32_single_components:
     runs-on: ubuntu-latest
     needs: build_verilator
-    strategy:
-      matrix: 
-        component: ["alu", "control", "register", "memory"]
 
     steps:
     - name: Checkout code
@@ -50,64 +47,35 @@ jobs:
         chmod -R +x /usr/local/share/verilator/*
         sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
 
-    - name: Run the testbench
-      run: | 
-        verilator --timescale 10ns/1ns --clk --assert -Wall --binary cores/riscy32_single/tests/${{ matrix.component }}_tb.sv cores/riscy32_single/src/${{ matrix.component }}.sv;
-        ./obj_dir/V${{ matrix.component }}_tb
+    - name: Setup sootty
+      run: |
+        sudo apt-get install -y python3
+        python3 -m pip install sootty
+        mkdir -p waveforms/svg waveforms/vcd
 
-  waveforms:
-    runs-on: ubuntu-latest
-    needs: riscy32_single
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Perpare for verilator
-        run: | 
-          sudo mkdir -p /usr/local/share/verilator/
-          sudo chown -R $(whoami):$(whoami) /usr/local/share/verilator/
-
-      - name: Restore Verilator Binary
-        uses: actions/cache@v4
-        with:
-          path: /usr/local/share/verilator/
-          key: verilator-binary
-
-      - name: Set up verilator
-        run: | 
-          sudo apt-get install ccache
-          chmod -R +x /usr/local/share/verilator/*
-          sudo ln -s /usr/local/share/verilator/bin/verilator /usr/local/bin/verilator
-
-      - name: Setup sootty
-        run: |
-          sudo apt-get install -y python3
-          python3 -m pip install sootty
-          mkdir -p waveforms/svg waveforms/vcd
-
-      - name: Generate waveforms
-        run: |
-          ITEMS="alu control" # without clock
-          for item in $ITEMS; do
-            verilator --timescale 10ns/1ns --assert --trace --binary cores/riscy32_single/tests/${item}_tb.sv cores/riscy32_single/src/${item}.sv
-            ./obj_dir/V${item}_tb
-            sootty "${item}.vcd" -o > waveforms/svg/${item}.svg
-            mv ${item}.vcd ./waveforms/vcd/
-          done
-          ITEMS="register memory" # With clock
-          for item in $ITEMS; do
-            verilator --clk clk --timescale 10ns/1ns --assert --trace --binary cores/riscy32_single/tests/${item}_tb.sv cores/riscy32_single/src/${item}.sv
-            ./obj_dir/V${item}_tb
-            sootty "${item}.vcd" -o > waveforms/svg/${item}.svg
-            mv ${item}.vcd ./waveforms/vcd/
-          done
+    - name: Run the testbenches
+      run: | # We need to rethink this, it is not working as I want it to.
+        ITEMS="alu control" # without clock
+        for item in $ITEMS; do
+          verilator --timescale 10ns/1ns --assert --trace --binary cores/riscy32_single/tests/${item}_tb.sv cores/riscy32_single/src/${item}.sv
+          ./obj_dir/V${item}_tb
+          sootty "${item}.vcd" -o > waveforms/svg/${item}.svg
+          mv ${item}.vcd ./waveforms/vcd/
+        done
+        ITEMS="register memory" # With clock
+        for item in $ITEMS; do
+          verilator --clk clk --timescale 10ns/1ns --assert --trace --binary cores/riscy32_single/tests/${item}_tb.sv cores/riscy32_single/src/${item}.sv
+          ./obj_dir/V${item}_tb
+          sootty "${item}.vcd" -o > waveforms/svg/${item}.svg
+          mv ${item}.vcd ./waveforms/vcd/
+        done
 
 
-      - name: Upload waveforms as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: waveforms
-          path: ./waveforms
+    - name: Upload waveforms as artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: waveforms
+        path: ./waveforms
 
   conway:
     runs-on: ubuntu-latest
