--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,7 +67,7 @@ jobs:
           mv ${item}.vcd ./waveforms/vcd/
         done
 
-    - name: Cache Waveforms 
+    - name: Cache vcd
       uses: actions/cache@v4
       with:
         path: ./waveforms
@@ -77,7 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: riscy32_single_components
     steps:
-    - name: Restore waveforms
+    - name: Restore vcds
       uses: actions/cache@v4
       with:
         path: ./waveforms
@@ -94,7 +94,7 @@ jobs:
         mkdir -p waveforms/svg
         for file in ./waveforms/vcd/*; do
           echo ${file}
-          filename = ${file##*/}
+          filename=${file##*/}
           sootty "${file}" l 300 -o > waveforms/svg/"${filename%.*}".svg
         done
       continue-on-error: true
